# mlops-pipeline

code/: .gitignore  README.md  dvc.yaml  pyproject.toml
code/configs/: poison.yaml  train.yaml
code/configs/raitap/: pneumonia_clean.yaml  pneumonia_clean_gradcam.yaml  pneumonia_poisoned.yaml  pneumonia_poisoned_gradcam.yaml
code/dags/: pneumonia_pipeline.py
code/docs/: collaborator-onboarding.md  gcp-setup.md  shared-vm-architecture.md
code/docs/poison-debug/: README.md  raitap-no-preprocessing-issue.md
code/scripts/: compare_gradcam.py  run-on-vm.sh  run-pipeline.ps1  run-pipeline.sh
code/scripts/admin/: add-collaborator.sh  vm-bootstrap.sh
code/src/mlops_pipeline/: __init__.py  paths.py
code/src/mlops_pipeline/assessment/: raitap_runner.py
code/src/mlops_pipeline/data/: prepare.py  watermark.py
code/src/mlops_pipeline/evaluation/: metrics.py
code/src/mlops_pipeline/training/: train.py
code/tests/: conftest.py  test_dag.py  test_paths.py  test_prepare.py  test_smoke.py
pitch/: biblio.bib  main.typ
