[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "MLOps pipeline for transparency and robustness evaluation (RAITAP) on pneumonia X-ray classification."
readme = "README.md"
authors = [
    { name = "Stanislas Laurent" },
    { name = "Jonas Vonderhagen" },
    { name = "Javier Fernandez Reguera" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    # RAITAP pulls torch via torch-cpu extra; switch to torch-cuda on GPU boxes.
    "raitap[captum,metrics,reporting,torch-cpu]>=0.4.0",
    "dvc>=3.50",
    "mlflow>=2.14",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "kaggle>=1.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "ipykernel>=6.29",
]
# Airflow orchestration. Install separately (Linux/WSL — Airflow has no
# Windows-native support). Airflow 3 supports Python 3.13.
orchestration = [
    "apache-airflow>=3.0",
]
# Swap torch-cpu for torch-cuda on GPU hosts:
#   uv sync --extra gpu
gpu = [
    "raitap[captum,metrics,reporting,torch-cuda]>=0.4.0",
]

[project.scripts]
mlops-pipeline = "mlops_pipeline:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
